# Dark-Singularity

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  repro_recall.rs
.github/workflows/: ci.yml  release.yml
dark_singularity_api/: pom.xml
dark_singularity_api/src/main/java/com/lunar_prototype/dark_singularity_api/: Singularity.java
dark_singularity_api/src/test/java/com/lunar_prototype/dark_singularity_api/: SingularityTest.java
src/: jni_api.rs  lib.rs  python_api.rs
src/core/: horizon.rs  knowledge.rs  math.rs  mod.rs  mwso.rs  node.rs  singularity.rs  visualizer.rs
tests/: adaptation_bench.rs  chaos_adaptability_bench.rs  integration_test.rs  irl_motivation_bench.rs  law_and_shift_bench.rs  learning_efficiency_bench.rs  memory_superposition_bench.rs  mwso_test.rs  performance_bench.rs  recall_test.rs  resonance_bench.rs  scaling_laws_bench.rs  tic_tac_toe_dual_guided_bench.rs  tic_tac_toe_evolution_bench.rs  tic_tac_toe_guided_bench.rs  tic_tac_toe_o_specialist_bench.rs
